<resources>
    <string name="app_name">MarvelApp</string>
    <string name="button_comics">Comics</string>
    <string name="button_characters">Personajes</string>
    <string name="button_films_and_series">Películas y series</string>

    <!-- Messages (like Toast) -->
    <string name="toast_buttonComics">Botón comics</string>
    <string name="toast_buttonCharacters">Botón personajes</string>
    <string name="toast_buttonFilmsAndSeries">Botón películas y series</string>

    <!-- Error text -->
    <string name="unknownError">Un error ha ocurrido</string>
    <string name="unknownHost">Host desconocido</string>


    <!-- Fragments' placeholder text -->
    <string name="series_view">VISTA DE PELÍCULAS Y SERIES</string>
    <string name="comics_view">VISTA DE COMICS</string>
    <string name="characters_view">VISTA DE PERSONAJES</string>

    <!-- Characters' fragment's buttons text -->
    <string name="search_button">Buscar</string>
    <string name="filter_button">Ordenar por</string>

    <!-- Films and series' fragment's placeholder text -->
    <string name="search">Buscar…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Fragments' text -->
    <string name="series_view">VISTA DE PELÍCULAS Y SERIES</string>
    <string name="comics_view">VISTA DE COMICS</string>
    <string name="characters_view">VISTA DE PERSONAJES</string>

    <!-- Films and series' fragment's text -->
    <string name="orderby">Order by…</string>
    <string name="search">Search…</string>

    <!-- Films and series' items' text -->
    <string name="fav_off">off</string>
    <string name="fav_on">on</string>

    <!-- Films and series' dialog "order by" texts -->
    <string name="orderby_alphabet">by alphabet</string>
    <string name="orderby_year">from newer to older</string>
    <string name="orderby_fav_first">by Favourites first</string>
    <string name="orderby_fav_only">by Favourites only</string>
    <string name="msg_orderby">Ordering</string>
    <string name="dialog_title">Order films and series…</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_canceled">Canceled</string>

    <!-- Loading_view.xml's text -->
    <string name="m_of_marvel">M</string>

    <!-- Unauthorized error (401) -->
    <string name="title_401">Unauthorized</string>
    <string name="msg_401">Go out!</string>

    <!-- EmptyError -->
    <string name="title_empty_error">This is empty</string>
    <string name="msg_empty_error">Sorry, there\'s nothing to show :(</string>

    <!-- UnknownHostError -->
    <string name="title_unknown_host_error">Do you have internet?</string>
    <string name="msg_unknown_host_error">It\'s probably the failure :)</string>

    <!-- CoroutineError -->
    <string name="title_coroutine_error">We\'ve found and error</string>
    <string name="msg_coroutine_error">Please, go back :)</string>

    <!-- Comic image description -->
    <string name="comic_image_description">Comic image</string>

    <!-- Back button -->
    <string name="back_button">Back button</string>
    <string name="marvel_comics_logo">Marvel Comics Logo</string>
    <string name="logo_error">Logo de error</string>
    <string name="favorite_button">Favorite button</string>
    <string name="title_icon">Title icon</string>
    <string name="all_comics_title">TODOS LOS COMICS</string>
    <string name="favorite_comics_title">COMICS FAVORITOS</string>
    <string name="error_fragment_text">Unauthorized access</string>
    <string name="error_code">Error %1$s</string>
</resources>