<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="256dp"
            android:text="@string/button_characters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_comics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_comics"
            app:layout_constraintEnd_toEndOf="@+id/button_characters"
            app:layout_constraintStart_toStartOf="@+id/button_characters"
            app:layout_constraintTop_toBottomOf="@+id/button_characters" />

        <Button
            android:id="@+id/button_films_and_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_films_and_series"
            app:layout_constraintEnd_toEndOf="@+id/button_comics"
            app:layout_constraintStart_toStartOf="@+id/button_comics"
            app:layout_constraintTop_toBottomOf="@+id/button_comics" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>