<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.CharactersFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/characters_view"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/svBuscador"
            app:layout_constraintTop_toTopOf="@+id/constraint" />

        <android.widget.SearchView
            android:id="@+id/svBuscador"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:queryHint="@string/search_button"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@id/rvCharacters"/>

        <Button
            android:id="@+id/btFiltros"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:text="@string/filter_button"
            app:layout_constraintBottom_toTopOf="@+id/rvCharacters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/svBuscador"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:visibility="gone"
            tools:visibility="visible"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCharacters"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/svBuscador" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>