<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comicsViewContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feature.comics.view.ComicsFragment">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/logo_margin"
        android:layout_marginTop="@dimen/logo_margin"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivError"
        android:layout_width="@dimen/logo_error_width"
        android:layout_height="@dimen/logo_error_height"
        android:contentDescription="@string/logo_error"
        android:src="@drawable/unauthorized_error_logo"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvErrorCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/logo_margin"
        android:textAlignment="center"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/ivError"
        app:layout_constraintStart_toStartOf="@+id/ivError"
        app:layout_constraintTop_toBottomOf="@+id/ivError" />

    <ImageView
        android:id="@+id/logoScreen"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_margin="@dimen/logo_margin"
        android:contentDescription="@string/marvel_comics_logo"
        android:src="@drawable/marvel_comics_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.SearchView
        android:id="@+id/svFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_searchview_background"
        android:theme="@style/txt_search_fragment_comic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoScreen" />

    <ImageView
        android:id="@+id/ivLogoAllComics"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_height"
        android:layout_marginStart="@dimen/icon_margin_start"
        android:layout_marginTop="@dimen/icon_margin_top"
        android:contentDescription="@string/title_icon"
        android:src="@drawable/ironman"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svFilter"
        app:tint="@color/white" />


    <TextView
        android:id="@+id/tvComicList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin_start"
        android:text="@string/all_comics_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ivLogoAllComics"
        app:layout_constraintStart_toEndOf="@+id/ivLogoAllComics"
        app:layout_constraintTop_toTopOf="@+id/ivLogoAllComics" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvComics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/recycler_margin_top"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvComicList" />

    <ProgressBar
        android:id="@+id/listProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/dark_red"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/ivLogoFavoriteComics"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_height"
        android:layout_marginStart="@dimen/icon_margin_start"
        android:layout_marginTop="@dimen/icon_margin_top"
        android:contentDescription="@string/title_icon"
        android:src="@drawable/ic_solid_heart"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvComics"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvFavoriteComics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin_start"
        android:text="@string/favorite_comics_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ivLogoFavoriteComics"
        app:layout_constraintStart_toEndOf="@+id/ivLogoFavoriteComics"
        app:layout_constraintTop_toTopOf="@+id/ivLogoFavoriteComics" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavoriteComics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/recycler_margin_top"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFavoriteComics" />


</androidx.constraintlayout.widget.ConstraintLayout>