<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.featureComics.view.ComicDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detailToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >


            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:src="@drawable/back_arrow"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold
"/>
        </androidx.appcompat.widget.Toolbar>

        <ProgressBar
            android:id="@+id/detailProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/dark_red"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/bottomCard"
            app:layout_constraintEnd_toEndOf="@+id/ivComic"
            app:layout_constraintStart_toStartOf="@+id/ivComic"
            app:layout_constraintTop_toTopOf="@+id/ivComic"
            tools:visibility="visible" />


        <ImageView
            android:id="@+id/ivComic"
            android:layout_width="match_parent"
            android:layout_height="512dp"
            android:contentDescription="@string/comic_image_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/guideLine" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="580dp"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/sivInfoComic"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/dark_red"
                android:elevation="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:shapeAppearanceOverlay="@style/RoundedShapeableImageView" />


            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:elevation="10dp"
                android:maxWidth="300dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/sivInfoComic"
                app:layout_constraintTop_toTopOf="@+id/sivInfoComic" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/sivInfoComic"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle">


                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:elevation="10dp"
                    android:maxWidth="300dp"
                    android:fontFamily="sans-serif"
                    android:scrollbars="vertical"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_goneMarginEnd="16dp"
                    />
            </ScrollView>


            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                android:layout_marginBottom="16dp"
                android:elevation="10dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/comicPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/btnFavorite"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:elevation="10dp"
                android:src="@drawable/ic_line_heart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                android:contentDescription="@string/favorite_button" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>